# rust-reduction

./: Cargo.toml
axum-todo/: Cargo.toml  rust.md
axum-todo/examples/: htm.rs  inter.rs  tracing.rs  websocket_sysinfo.rs  ws_client.rs
axum-todo/src/: main.rs  models.rs
axum-todo/src/handlers/: mod.rs  sysinfo_ws.rs  todo_create.rs  todo_delete.rs  todo_index.rs  todo_update.rs  todos.rs
prost-hello-world/: Cargo.toml  build.rs
prost-hello-world/examples/: client.rs
prost-hello-world/src/: cached.rs  items.proto  main.rs
rustmath/: Cargo.toml
rustmath/src/: lib.rs
tonic-hello-world/: Cargo.toml
