[package]
name = "axum-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.4", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
libsql-client = { version = "0.31", default-features = false, features = ["local_backend"] }
anyhow = "1.0"
dashmap = "5.5"
sled = "0.34"
rand = "0.8"

[dev-dependencies]
html2md = "0.2"
reqwest = "0.11"
console-subscriber = "0.1"

[[example]]
name = "inter"
[[example]]
name = "htm"

[[example]]
name = "tracing"
