[package]
name = "tio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bytes = "1.4.0"
futures = "0.3.26"
prost = "0.12"
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["codec"] }

[build-dependencies]
prost-build = "0.12"
