[package]
name = "rustmatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = {version = "0.19", features = ["extension-module"]}

[lib]
name = "rustmath"
crate-type = ["cdylib"]

[build-dependencies]
pyo3-build-config = "0.19"